--- a/prometheus-netcore/prometheus-netcore.csproj
+++ b/prometheus-netcore/prometheus-netcore.csproj
@@ -1,5 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
     <AssemblyName>prometheus-netcore</AssemblyName>
@@ -9,7 +8,6 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="..\prometheus-net\Advanced\Child.cs" />
     <Compile Include="..\prometheus-net\Advanced\Collector.cs" />
@@ -35,16 +33,14 @@
     <Compile Include="..\prometheus-net\ScrapeHandler.cs" />
     <Compile Include="..\prometheus-net\Summary.cs" />
     <Compile Include="..\prometheus-net\Metrics.cs" />
-</ItemGroup>
-
-<ItemGroup>
-  <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.0.2" />
-  <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Https" Version="1.0.2" />
-  <PackageReference Include="NETStandard.Library" Version="1.6.0" />
-  <PackageReference Include="protobuf-net" Version="2.1.0" />
-  <PackageReference Include="System.Diagnostics.Process" Version="4.1.0" />
-  <PackageReference Include="System.Reactive.Core" Version="3.0.0" />
-  <PackageReference Include="System.Reactive.Interfaces" Version="3.0.0" />
-</ItemGroup>
-
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Https" Version="1.0.2" />
+    <PackageReference Include="NETStandard.Library" Version="1.6.0" />
+    <PackageReference Include="protobuf-net" Version="2.1.0" />
+    <PackageReference Include="System.Diagnostics.Process" Version="4.1.0" />
+    <PackageReference Include="System.Reactive.Core" Version="3.0.0" />
+    <PackageReference Include="System.Reactive.Interfaces" Version="3.0.0" />
+  </ItemGroup>
 </Project>
